Fix-Done view CRUD

--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -20,28 +20,28 @@
             <th scope="col">#</th>
             <th scope="col">Name</th>
             <th scope="col">Description</th>
+
         </tr>
     </thead>
     <tbody>
         @foreach (var category in Model)
         {
         <tr>
-            <th scope="row">@category.Id</th>
             <td>@category.Name</td>
             <td>@category.Description</td>
             <td>
 
                 @Html.ActionLink("Edit", // <-- Link text
                                  "Edit", // <-- Action Method Name
-                                 "Categories", // <-- Controller Name
-                                 new { id = category.Id }, // <-- Route value
-                                 new { @class = "btn btn-default" })  @*htmlArguments*@
+                                 new { id = category.Id })
 
                 @Html.ActionLink("Delete", // <-- Link text
                                 "Delete", // <-- Action Method Name
-                                "Categories", // <-- Controller Name
-                                new { id = category.Id }, // <-- Route value
-                                new { @class = "btn btn-default" })   @*htmlArguments*@
+                                new { id = category.Id })
+                @Html.ActionLink("Details",
+                                "Details",
+                                new { id = category.Id })
+
             </td>
          </tr>
         }
