Add Edit of Courses

--- a/Views/Courses/Index.cshtml
+++ b/Views/Courses/Index.cshtml
@@ -69,7 +69,7 @@
                                                          "Delete", // <-- Action Method Name
                                                          "Courses", // <-- Controller Name
                                                          new { id = course.Id }, // <-- Route value
-                                                         new { @class = "btn btn-danger" } // <-- htmlArguments
+                                                         new { @class = "btn btn-default" } // <-- htmlArguments
                                                      )
                     </td>
 
