--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using AppDevelopment0805.Roles
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -21,9 +22,23 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Categories", "Index", "Categories")</li>
-                    <li>@Html.ActionLink("Courses", "Index", "Courses")</li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        if (User.IsInRole(Role.Admin))
+                        {
+                            <li>@Html.ActionLink("Staff Account", "AddStaff", "Admin")</li>
+                            <li>@Html.ActionLink("Trainer Account", "AddTrainer", "Admin")</li>
+                        }
+                        if (User.IsInRole(Role.Staff))
+                        {
+                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                            <li>@Html.ActionLink("Categories", "Index", "Categories")</li>
+                            <li>@Html.ActionLink("Courses", "Index", "Courses")</li>
+                        }
+
+
+                    }
+
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
