Staff-Create-Delete-Edit-AccountTrainee

--- a/Views/Admin/AddStaff.cshtml
+++ b/Views/Admin/AddStaff.cshtml
@@ -30,7 +30,7 @@
                 <td>@staff.Address</td>
                 <td>@Html.ActionLink("Edit", "EditStaff", "Admin", new { id = @staff.Id }, new { @class = "btn btn-default" })</td>
                 <td>@Html.ActionLink("Delete", "DeleteStaff", "Admin", new { id = @staff.StaffId }, new { @class = "btn btn-default" })</td>
-                <td>@Html.ActionLink("Change Password", "StaffChangePassword", "Admin", new { id = staff.StaffId }, new { @class = "btn btn-danger" })</td>
+                <td>@Html.ActionLink("Change Password", "StaffChangePassword", "Admin", new { id = staff.StaffId }, new { @class = "btn btn-default" })</td>
             </tr>
         }
             </tr>
