--- a/Views/Trainers/Index.cshtml
+++ b/Views/Trainers/Index.cshtml
@@ -5,7 +5,7 @@
 
 <h2>My Profile</h2>
 
-@Html.ActionLink("Edit", "Edit", "Trainers", new { id = @Model.Id }, new { @class = "btn btn-success" })
+@Html.ActionLink("Edit", "Edit", "Trainers", new { id = @Model.Id }, new { @class = "btn btn-default" })
 
 
 <div class="panel panel-default">
@@ -14,7 +14,7 @@
     </div>
     <div class="panel-body">
         <p>Age: @Model.Age</p>
-        <p>Specialty: @Model.Specialty</p>
         <p>Address: @Model.Address</p>
+        <p>Specialty: @Model.Specialty</p>
     </div>
 </div>
