--- a/Views/Trainers/Courses.cshtml
+++ b/Views/Trainers/Courses.cshtml
@@ -23,7 +23,7 @@
                 <td>@item.Description</td>
                 <td>@item.Category.Name</td>
                 <td>
-                    @Html.ActionLink("Trainees", "CourseTrainees", "Trainers", new { id = item.Id }, new { @class = "btn btn-success" })
+                    @Html.ActionLink("Trainees", "CourseTrainees", "Trainers", new { id = item.Id }, new { @class = "btn btn-default" })
                 </td>
             </tr>
         }
